sdm845.config: enable wwan related and q6voice configs

--- a/arch/arm64/configs/sdm845.config
+++ b/arch/arm64/configs/sdm845.config
@@ -537,3 +537,11 @@ CONFIG_TMPFS_XATTR=y
 CONFIG_DM_CRYPT=y
 
 CONFIG_BINFMT_MISC=m
+
+#wwan stuffs
+CONFIG_WWAN=y
+CONFIG_WWAN_CORE=y
+CONFIG_RPMSG_WWAN_CTRL=y
+
+#Q6VOICE
+CONFIG_SND_SOC_QDSP6_Q6VOICE=m
