arm64: dts: xiaomi-beryllium: imx363 use 4 data lanes

--- a/arch/arm64/boot/dts/qcom/sdm845-xiaomi-beryllium-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm845-xiaomi-beryllium-common.dtsi
@@ -814,7 +814,7 @@
 		port {
 			imx363_ep: endpoint {
 				clock-lanes = <1>;
-				data-lanes = <0 1>;
+				data-lanes = <1 2 3 4>;
 				remote-endpoint = <&csiphy0_ep>;
 			};
 		};
