--- a/arch/arm64/boot/dts/qcom/pmi8998.dtsi
+++ b/arch/arm64/boot/dts/qcom/pmi8998.dtsi
@@ -55,7 +55,7 @@
 		};
 
 		pmi8998_haptics: qcom,haptics@c000 {
-			compatible = "qcom,qpnp-haptics-buffer";
+			compatible = "qcom,qpnp-haptics";
 			reg = <0xc000 0x100>;
 
 			interrupts = <0x3 0xc0 0x0 IRQ_TYPE_EDGE_BOTH>,
